<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/play_random_group"
        android:visible="true"
        android:enabled="true"
        android:orderInCategory="0" >
	    <item android:id="@+id/random_sound"
	        android:icon="@drawable/ic_action_random"
	        android:title="@string/menu_random"
	        android:orderInCategory="0"
	        android:showAsAction="ifRoom" />
	</group>
	<group android:id="@+id/stop_random_group"
        android:visible="false"
        android:enabled="false"
        android:orderInCategory="0" >
	    <item android:id="@+id/stop_random_sound"
	        android:icon="@drawable/ic_action_stop_playback"
	        android:title="@string/menu_stop"
	        android:orderInCategory="0"
	        android:showAsAction="ifRoom" />
	</group>
    <item android:id="@+id/explore_soundboards"
        android:icon="@drawable/ic_action_explore"
        android:title="@string/menu_explore"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/storage_details"
		android:icon="@drawable/ic_menu_storage_info"
		android:title="@string/menu_storage_details"
		android:orderInCategory="0"
		android:showAsAction="never" />
	<item android:id="@+id/hidden_sounds"
		android:icon="@drawable/ic_menu_hidden_sounds"
		android:title="@string/menu_hidden_sounds"
		android:orderInCategory="1"
		android:showAsAction="never" />
	<item android:id="@+id/clear"
		android:icon="@drawable/ic_menu_delete_unused"
		android:title="@string/menu_clear"
		android:orderInCategory="2"
		android:showAsAction="never" />
</menu>